Bug Fix: alignment center

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -6,6 +6,10 @@
   text-align: center;
 }
 
+.margin-auto {
+  margin: auto !important;
+}
+
 .margin-bottom-10 {
   margin-bottom: 10px;
 }
